# sentiment_analysis_epp

./: CITATION  LICENSE  README.md  environment.yml  pyproject.py  pyproject.toml  setup.cfg  test_plot_performance_input.csv  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
docs/source/: api.md  changes.md  conf.py  index.md
source/: conf.py  index.rst
src/data_management/: data.csv
src/models/: models.py  task_models.py  task_outputs.py  task_upload_clean.py
src/paper/: paper.tex
src/sentiment_analysis_epp/: __init__.py  conf.py  config.py  index.rst
src/sentiment_analysis_epp/data_management/: README.txt  data.csv  preprocessed_data.pkl
src/sentiment_analysis_epp/models/: models.py  plots.py  task_plot.py  task_run_models.py
src/sentiment_analysis_epp/paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  refs.bib  task_compile.py
tests/: test_import.py  test_models.py  test_plots.py
