[metadata]
name = sentiment_analysis_epp
description = A project for Effective Programming Practices for Economists class written by Ozodbek Ozodov
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ozodbekozodov/sentiment_analysis_epp
author = O.Ozodov
author_email = o.ozodov97@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/ozodbekozodov/sentiment_analysis_epp
    Documentation = https://github.com/ozodbekozodov/sentiment_analysis_epp
    Github = https://github.com/ozodbekozodov/sentiment_analysis_epp
    Tracker = https://github.com/ozodbekozodov/sentiment_analysis_epp/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/sentiment_analysis_epp/_version.py
